@@ -1,17 +1,16 @@
-package nl.cas_en_luke.oopd_eindopdracht.entities.projectiles;
+package nl.cas_en_luke.oopd_eindopdracht.scenes.game.entities.projectiles;
 
 import nl.cas_en_luke.oopd_eindopdracht.Effect;
 import nl.cas_en_luke.oopd_eindopdracht.effects.instant.DamageInstantEffect;
-import nl.cas_en_luke.oopd_eindopdracht.entities.Projectile;
+import nl.cas_en_luke.oopd_eindopdracht.scenes.game.entities.Projectile;
 import org.apache.commons.math3.geometry.euclidean.twod.Vector2D;
 
-import java.util.Arrays;
 import java.util.List;
 
-public class BombProjectile extends Projectile {
-    private static final String RESOURCE = "nl/cas_en_luke/oopd_eindopdracht/images/projectiles/bomb_16.png";
-    private static final List<Effect.Builder<?>> EFFECT_BUILDERS = Arrays.asList(
-            DamageInstantEffect.newBuilder(1.0)
+public class CrushingBombProjectile extends Projectile {
+    private static final String RESOURCE = "nl/cas_en_luke/oopd_eindopdracht/images/projectiles/crushing_bomb_16.png";
+    private static final List<Effect.Builder<?>> EFFECT_BUILDERS = List.of(
+            DamageInstantEffect.newBuilder(2.0)
     );
     private static final double SPEED = 200.0;
 
@@ -23,7 +22,7 @@ public class BombProjectile extends Projectile {
         @Override
         public Projectile build(final Vector2D position, final double angle) {
             final Vector2D velocity = getVelocityVectorFromAngle(angle);
-            return new BombProjectile(velocity, position);
+            return new CrushingBombProjectile(velocity, position);
         }
     }
 
@@ -31,7 +30,7 @@ public class BombProjectile extends Projectile {
         return new Builder();
     }
 
-    public BombProjectile(final Vector2D velocity, final Vector2D position) {
+    public CrushingBombProjectile(final Vector2D velocity, final Vector2D position) {
         super(RESOURCE, EFFECT_BUILDERS, velocity, position);
     }
 }
